@@ -1131,11 +1131,6 @@ public class View extends JFrame implements EBComponent
 			handleBufferUpdate((BufferUpdate)msg);
 		else if(msg instanceof EditPaneUpdate)
 			handleEditPaneUpdate((EditPaneUpdate)msg);
-		else if(msg instanceof PluginUpdate)
-		{
-			if(actionBar != null)
-				actionBar.actionListChanged();
-		}
 	} //}}}
 
 	//{{{ getMinimumSize() method
